--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wsr21">
+    <uses-permission android:name="android.permission.INTERNET">
+
+    </uses-permission>
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,5 +23,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
